--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,11 @@
     <p>Email: Marklejdp1@gmail.com</p>
     <hr>
     <form action="mailto:marklejdp1@gmail.com" method="post" enctype="text/plain">
-        <label>Your Name:</label>
+        <label>Your Name.miss:</label>
         <input type="text" name="yourName" value=""><br>
-        <label>Your Email:</label>
+        <label>Your Email.you:</label>
         <input type="email" name="yourEmail" value=""><br>
-        <label>Your Message:</label>
+        <label>Your Message.babearoo:</label>
         <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
         <input type="submit">
 
